fix : Cover Size on small screens

--- a/docs/main.css
+++ b/docs/main.css
@@ -105,7 +105,6 @@ main {
   background-size: cover;
   padding: 2rem;
   min-block-size: 100vh;
-  max-block-size: 100vh;
   line-height: 1.1;
   background: azure;
 }
@@ -271,7 +270,7 @@ footer ul li a:active {
 
 /* imp for responsive fonts will be using it later!!! */
 /* desktop first media here*/
-/* @media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   html {
     font-size: 50%;
   }
@@ -324,4 +323,4 @@ footer ul li a:active {
     background-size: cover;
     background-repeat: none;
   }
-} */
+}
